<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sypLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/syp_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bean and Leaf"
        android:layout_below="@+id/sypLogo"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appName"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>


    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:text="login with google"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_google_logo"
        android:drawableLeft="@drawable/ic_google_logo" />

</RelativeLayout>