...
                        </TextView>

                    </RelativeLayout>

                    <com.github.mikephil.charting.charts.BarChart

                        android:id="@+id/barChartPriceMonthly"
                        android:layout_height="110dp"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

...
